[project]
name = "cntdrun"
version = "1.0.5"
description = "A countdown running program tool"
readme = "README.md"
authors = [
    { name = "gzj", email = "gzj00@outlook.com" },
]
requires-python = ">=3.9"
dependencies = [
    "pyside6>=6.5",
]

[project.scripts]
cntdrun = "cntdrun.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cntdrun"]

[dependency-groups]
dev = []
